# ptlink.ircd

./: BUGS  CHANGES  INSTALL  INSTALL.SSL  Makefile.in  README  README.md  configure  reconf.sh  shtool
ChangeLog/: 6.0.0  6.1.x  6.10.x  6.12.x  6.13.x  6.14.x  6.15.x  6.16.x  6.17.x  6.18.x  6.2.x  6.3.x  6.5.x  6.6.x  6.7.x  6.8.x  6.9.x
adns/: .depend  Makefile.in  adns.h  check.c  dlist.h  event.c  general.c  internal.h  parse.c  poll.c  query.c  reply.c  setup.c  transmit.c  tvarith.h  types.c
autoconf/: acconfig.h  configure.in
doc/: CIDR.txt  Makefile  PTS4.txt  PTS4CHANGES  README.TSora  SCS.txt  TSversion.txt  encryption.txt  ircd.8  mtrie.txt  simple.conf
doc/old/: Authors  Etiquette  README
doc/old/US-Admin/: Networking  Operators  README
doc_hybrid6/: ChangeLog  Hybrid-team  README.FIRST  README.small_nets  RELNOTES  opermyth.txt  opers.txt
include/: channel.h  class.h  client.h  common.h  config.h  crypt.h  dbuf.h  dconf.h  dconf_vars.h  dline_conf.h  fdlist.h  fileio.h  flud.h  hash.h  help.h  hvc.h  irc_string.h  ircd.h  ircd_defs.h  ircd_signal.h  list.h  listener.h  m_commands.h  m_gline.h  m_info.h  m_kline.h  m_silence.h  m_svsinfo.h  motd.h  msg.h  mtrie_conf.h  numeric.h  oratime.h  packet.h  parse.h  patchlevel.h  res.h  restart.h  s_auth.h  s_bsd.h  (+26 more)
ircdcron/: ircd.cron  ircdchk
samples/: example.conf.short  help.admin  help.oper  hvc.font  main.dconf.sample  network.dconf.sample  ptlink.motd  resolv.conf.sample
src/: .depend  Makefile.in  adns.c  channel.c  class.c  client.c  crypt.c  dbuf.c  dconf.c  dline_conf.c  fdlist.c  fileio.c  flud.c  hash.c  help.c  hvc.c  irc_string.c  ircd.c  ircd_signal.c  list.c  listener.c  m_admin.c  m_away.c  m_bots.c  m_capab.c  m_close.c  m_codepage.c  m_connect.c  m_dccdenys.c  m_die.c  m_error.c  m_floodex.c  m_gline.c  m_helpers.c  m_htm.c  m_imode.c  m_info.c  m_ircops.c  m_ison.c  m_kill.c  (+76 more)
src/codepage/: .cvsignore  README  iso8859-1.enc  koi8u.enc  makefile.vc  mkenc.c  mkenc.rc  translit.enc
src/test/: Makefile  ilimit_test.c  match_t.c  parsetest.c  strncpy_t.c  testattr.c
src/test/data/: collapse.data  match.data
src/test/reference/: match_t.0  match_t.ref  strncpy_t.ref
tools/: Makefile.in  README  fixklines.c  install_ircd  ircd_start.c  killircd.c  klineParse.c  makeconfig  mkconf  mkkeypair  mkoline  mkpasswd.c  rehash  sendbug  start_ircd.c  untabify  viconf.c
